--- a/spec/fixtures/vcr_cassettes/chat_error_handling_with_openai_gpt-5-nano_raises_appropriate_auth_error.yml
+++ b/spec/fixtures/vcr_cassettes/chat_error_handling_with_openai_gpt-5-nano_raises_appropriate_auth_error.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.openai.com/v1/chat/completions
+    uri: https://api.openai.com/v1/responses
     body:
       encoding: UTF-8
-      string: '{"model":"gpt-5-nano","messages":[{"role":"user","content":"Hello"}],"stream":false}'
+      string: '{"model":"gpt-5-nano","input":[{"type":"message","role":"user","content":"Hello","status":"completed"}],"stream":false}'
     headers:
       User-Agent:
       - Faraday v2.14.0
@@ -23,44 +23,46 @@ http_interactions:
       message: Unauthorized
     headers:
       Date:
-      - Fri, 16 Jan 2026 16:48:13 GMT
+      - Tue, 10 Feb 2026 05:37:49 GMT
       Content-Type:
-      - application/json; charset=utf-8
+      - application/json
       Content-Length:
-      - '261'
+      - '240'
       Connection:
       - keep-alive
-      Vary:
-      - Origin
+      Server:
+      - cloudflare
+      Www-Authenticate:
+      - Bearer realm="OpenAI API"
+      Openai-Version:
+      - '2020-10-01'
       X-Request-Id:
       - "<X_REQUEST_ID>"
-      X-Envoy-Upstream-Service-Time:
-      - '0'
-      X-Openai-Proxy-Wasm:
-      - v0.1
+      Openai-Processing-Ms:
+      - '21'
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
       - "<COOKIE>"
       - "<COOKIE>"
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
       X-Content-Type-Options:
       - nosniff
-      Server:
-      - cloudflare
       Cf-Ray:
       - "<CF_RAY>"
       Alt-Svc:
       - h3=":443"; ma=86400
     body:
       encoding: UTF-8
-      string: |
+      string: |-
         {
-            "error": {
-                "message": "Incorrect API key provided: invalid-key. You can find your API key at https://platform.openai.com/account/api-keys.",
-                "type": "invalid_request_error",
-                "param": null,
-                "code": "invalid_api_key"
-            }
+          "error": {
+            "message": "Incorrect API key provided: invalid-key. You can find your API key at https://platform.openai.com/account/api-keys.",
+            "type": "invalid_request_error",
+            "param": null,
+            "code": "invalid_api_key"
+          }
         }
-  recorded_at: Fri, 16 Jan 2026 16:48:13 GMT
+  recorded_at: Tue, 10 Feb 2026 05:37:49 GMT
 recorded_with: VCR 6.4.0
