--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-5-nano_reports_consistent_token_counts_compared_to_non-streaming.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-5-nano_reports_consistent_token_counts_compared_to_non-streaming.yml
@@ -24,54 +24,33 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 16 Jan 2026 16:54:22 GMT
+      - Tue, 10 Feb 2026 05:39:25 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Access-Control-Expose-Headers:
-      - X-Request-ID
-      Openai-Organization:
-      - "<OPENAI_ORGANIZATION>"
-      Openai-Processing-Ms:
-      - '188'
-      Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      Server:
+      - cloudflare
       Openai-Version:
       - '2020-10-01'
-      X-Envoy-Upstream-Service-Time:
-      - '442'
-      X-Ratelimit-Limit-Requests:
-      - '500'
-      X-Ratelimit-Limit-Tokens:
-      - '200000'
-      X-Ratelimit-Remaining-Requests:
-      - '499'
-      X-Ratelimit-Remaining-Tokens:
-      - '199993'
-      X-Ratelimit-Reset-Requests:
-      - 120ms
-      X-Ratelimit-Reset-Tokens:
-      - 2ms
+      Openai-Organization:
+      - "<OPENAI_ORGANIZATION>"
+      Openai-Project:
+      - "<OPENAI_PROJECT>"
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Openai-Processing-Ms:
-      - '49'
-      X-Envoy-Upstream-Service-Time:
-      - '54'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
+      - '55'
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
       - "<COOKIE>"
-      - "<COOKIE>"
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
       X-Content-Type-Options:
       - nosniff
-      Server:
-      - cloudflare
       Cf-Ray:
       - "<CF_RAY>"
       Alt-Svc:
@@ -79,30 +58,52 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"UjHt423h"}
+        event: response.created
+        data: {"type":"response.created","response":{"id":"resp_0db19196c3702b3700698ac48d82f48197beaccf52bf7ca057","object":"response","created_at":1770701965,"status":"in_progress","background":false,"completed_at":null,"error":null,"frequency_penalty":0.0,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-4.1-nano-2025-04-14","output":[],"parallel_tool_calls":true,"presence_penalty":0.0,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":null,"summary":null},"safety_identifier":null,"service_tier":"auto","store":true,"temperature":0.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":null,"user":null,"metadata":{}},"sequence_number":0}
 
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":"1"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"yPq28BSdx"}
+        event: response.in_progress
+        data: {"type":"response.in_progress","response":{"id":"resp_0db19196c3702b3700698ac48d82f48197beaccf52bf7ca057","object":"response","created_at":1770701965,"status":"in_progress","background":false,"completed_at":null,"error":null,"frequency_penalty":0.0,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-4.1-nano-2025-04-14","output":[],"parallel_tool_calls":true,"presence_penalty":0.0,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":null,"summary":null},"safety_identifier":null,"service_tier":"auto","store":true,"temperature":0.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":null,"user":null,"metadata":{}},"sequence_number":1}
 
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"hQoNc9e5A"}
+        event: response.output_item.added
+        data: {"type":"response.output_item.added","item":{"id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","type":"message","status":"in_progress","content":[],"role":"assistant"},"output_index":0,"sequence_number":2}
 
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"eUzDIiG41"}
-
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":"2"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"AYTRjGbTo"}
-
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"Ub5Q6q6W8"}
-
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"SKDnhj31e"}
-
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{"content":"3"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"Gan7HPsin"}
-
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null,"obfuscation":"nRXQ"}
-
-        data: {"id":"chatcmpl-CyhNVJxQPKeN5WmHuGEsts6zXVcHP","object":"chat.completion.chunk","created":1768582461,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_7f8eb7d1f9","choices":[],"usage":{"prompt_tokens":14,"completion_tokens":7,"total_tokens":21,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"vkmVh6snmq"}
+        event: response.content_part.added
+        data: {"type":"response.content_part.added","content_index":0,"item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","output_index":0,"part":{"type":"output_text","annotations":[],"logprobs":[],"text":""},"sequence_number":3}
 
         event: response.output_text.delta
-        data: {"type":"response.output_text.delta","sequence_number":10,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":"3","logprobs":[],"obfuscation":"iDi5ypLkUdBQheq"}
+        data: {"type":"response.output_text.delta","content_index":0,"delta":"1","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"vpcGSIRK8HDrpQD","output_index":0,"sequence_number":4}
 
-  recorded_at: Fri, 16 Jan 2026 16:54:22 GMT
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":",","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"juZuF25r92EphMC","output_index":0,"sequence_number":5}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":" ","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"WcLwdeLwsRa9W6m","output_index":0,"sequence_number":6}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":"2","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"V9Tz5T1w5IayQ5v","output_index":0,"sequence_number":7}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":",","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"1tPPwIG2S2KaLtM","output_index":0,"sequence_number":8}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":" ","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"3flVEyKTO6rzoU1","output_index":0,"sequence_number":9}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":"3","item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"obfuscation":"wI0148Ep7eCLAB1","output_index":0,"sequence_number":10}
+
+        event: response.output_text.done
+        data: {"type":"response.output_text.done","content_index":0,"item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","logprobs":[],"output_index":0,"sequence_number":11,"text":"1, 2, 3"}
+
+        event: response.content_part.done
+        data: {"type":"response.content_part.done","content_index":0,"item_id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","output_index":0,"part":{"type":"output_text","annotations":[],"logprobs":[],"text":"1, 2, 3"},"sequence_number":12}
+
+        event: response.output_item.done
+        data: {"type":"response.output_item.done","item":{"id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"1, 2, 3"}],"role":"assistant"},"output_index":0,"sequence_number":13}
+
+        event: response.completed
+        data: {"type":"response.completed","response":{"id":"resp_0db19196c3702b3700698ac48d82f48197beaccf52bf7ca057","object":"response","created_at":1770701965,"status":"completed","background":false,"completed_at":1770701965,"error":null,"frequency_penalty":0.0,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-4.1-nano-2025-04-14","output":[{"id":"msg_0db19196c3702b3700698ac48db1d081979c10eb0aefbcab41","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"1, 2, 3"}],"role":"assistant"}],"parallel_tool_calls":true,"presence_penalty":0.0,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":null,"summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":0.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":{"input_tokens":14,"input_tokens_details":{"cached_tokens":0},"output_tokens":8,"output_tokens_details":{"reasoning_tokens":0},"total_tokens":22},"user":null,"metadata":{}},"sequence_number":14}
+
+  recorded_at: Tue, 10 Feb 2026 05:39:25 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/responses
@@ -127,25 +128,15 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 16 Jan 2026 16:54:22 GMT
+      - Tue, 10 Feb 2026 05:39:26 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Access-Control-Expose-Headers:
-      - X-Request-ID
-      Openai-Organization:
-      - "<OPENAI_ORGANIZATION>"
-      Openai-Processing-Ms:
-      - '277'
-      Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
-      Openai-Version:
-      - '2020-10-01'
-      X-Envoy-Upstream-Service-Time:
-      - '293'
+      Server:
+      - cloudflare
       X-Ratelimit-Limit-Requests:
       - '500'
       X-Ratelimit-Limit-Tokens:
@@ -153,28 +144,29 @@ http_interactions:
       X-Ratelimit-Remaining-Requests:
       - '499'
       X-Ratelimit-Remaining-Tokens:
-      - '199993'
+      - '199967'
       X-Ratelimit-Reset-Requests:
       - 120ms
       X-Ratelimit-Reset-Tokens:
-      - 2ms
+      - 9ms
+      Openai-Version:
+      - '2020-10-01'
+      Openai-Organization:
+      - "<OPENAI_ORGANIZATION>"
+      Openai-Project:
+      - "<OPENAI_PROJECT>"
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Openai-Processing-Ms:
-      - '421'
-      X-Envoy-Upstream-Service-Time:
-      - '424'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
+      - '452'
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
       - "<COOKIE>"
-      - "<COOKIE>"
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
       X-Content-Type-Options:
       - nosniff
-      Server:
-      - cloudflare
       Cf-Ray:
       - "<CF_RAY>"
       Alt-Svc:
@@ -183,13 +175,25 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |-
         {
-          "id": "chatcmpl-CyhNWV1F2pt1bDSP9om2swlzG7caC",
-          "object": "chat.completion",
-          "created": 1768582462,
+          "id": "resp_0761ee45385d6ac400698ac48e1d08819696a77b4dfe84a135",
+          "object": "response",
+          "created_at": 1770701966,
+          "status": "completed",
+          "background": false,
+          "billing": {
+            "payer": "developer"
+          },
+          "completed_at": 1770701966,
+          "error": null,
+          "frequency_penalty": 0.0,
+          "incomplete_details": null,
+          "instructions": null,
+          "max_output_tokens": null,
+          "max_tool_calls": null,
           "model": "gpt-4.1-nano-2025-04-14",
           "output": [
             {
-              "id": "msg_68abef6e951c81a2bb5723793251df3d094625f18cdea301",
+              "id": "msg_0761ee45385d6ac400698ac48e61448196a84751789c387e68",
               "type": "message",
               "status": "completed",
               "content": [
@@ -204,15 +208,42 @@ http_interactions:
             }
           ],
           "parallel_tool_calls": true,
+          "presence_penalty": 0.0,
           "previous_response_id": null,
           "prompt_cache_key": null,
+          "prompt_cache_retention": null,
           "reasoning": {
             "effort": null,
             "summary": null
           },
           "safety_identifier": null,
           "service_tier": "default",
-          "system_fingerprint": "fp_7f8eb7d1f9"
+          "store": true,
+          "temperature": 0.0,
+          "text": {
+            "format": {
+              "type": "text"
+            },
+            "verbosity": "medium"
+          },
+          "tool_choice": "auto",
+          "tools": [],
+          "top_logprobs": 0,
+          "top_p": 1.0,
+          "truncation": "disabled",
+          "usage": {
+            "input_tokens": 14,
+            "input_tokens_details": {
+              "cached_tokens": 0
+            },
+            "output_tokens": 8,
+            "output_tokens_details": {
+              "reasoning_tokens": 0
+            },
+            "total_tokens": 22
+          },
+          "user": null,
+          "metadata": {}
         }
-  recorded_at: Fri, 16 Jan 2026 16:54:22 GMT
+  recorded_at: Tue, 10 Feb 2026 05:39:26 GMT
 recorded_with: VCR 6.4.0
