--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-5-nano_supports_streaming_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-5-nano_supports_streaming_responses.yml
@@ -2,11 +2,11 @@
 http_interactions:
 - request:
     method: post
-    uri: https://api.openai.com/v1/chat/completions
+    uri: https://api.openai.com/v1/responses
     body:
       encoding: UTF-8
-      string: '{"model":"gpt-5-nano","messages":[{"role":"user","content":"Count from
-        1 to 3"}],"stream":true,"stream_options":{"include_usage":true}}'
+      string: '{"model":"gpt-5-nano","input":[{"type":"message","role":"user","content":"Count
+        from 1 to 3","status":"completed"}],"stream":true}'
     headers:
       User-Agent:
       - Faraday v2.14.0
@@ -24,52 +24,33 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 16 Jan 2026 16:54:21 GMT
+      - Tue, 10 Feb 2026 05:39:23 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Access-Control-Expose-Headers:
-      - X-Request-ID
-      Openai-Organization:
-      - "<OPENAI_ORGANIZATION>"
-      Openai-Processing-Ms:
-      - '1649'
-      Openai-Project:
-      - proj_61L3Oqt640dKU0CASS2iOj8Q
+      Server:
+      - cloudflare
       Openai-Version:
       - '2020-10-01'
-      X-Envoy-Upstream-Service-Time:
-      - '1663'
-      X-Ratelimit-Limit-Requests:
-      - '500'
-      X-Ratelimit-Limit-Tokens:
-      - '200000'
-      X-Ratelimit-Remaining-Requests:
-      - '499'
-      X-Ratelimit-Remaining-Tokens:
-      - '199993'
-      X-Ratelimit-Reset-Requests:
-      - 120ms
-      X-Ratelimit-Reset-Tokens:
-      - 2ms
+      Openai-Organization:
+      - "<OPENAI_ORGANIZATION>"
+      Openai-Project:
+      - "<OPENAI_PROJECT>"
       X-Request-Id:
       - "<X_REQUEST_ID>"
-      X-Openai-Proxy-Wasm:
-      - v0.1
+      Openai-Processing-Ms:
+      - '67'
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
-      - "<COOKIE>"
       - "<COOKIE>"
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       X-Content-Type-Options:
       - nosniff
-      Server:
-      - cloudflare
       Cf-Ray:
       - "<CF_RAY>"
       Alt-Svc:
@@ -77,24 +58,51 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"finish_reason":null}],"usage":null,"obfuscation":"mZL0y"}
+        event: response.created
+        data: {"type":"response.created","response":{"id":"resp_03483cb0d6cdcebd00698ac48b25f08194a24ab37b3073a684","object":"response","created_at":1770701963,"status":"in_progress","background":false,"completed_at":null,"error":null,"frequency_penalty":0.0,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-nano-2025-08-07","output":[],"parallel_tool_calls":true,"presence_penalty":0.0,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"auto","store":true,"temperature":1.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":null,"user":null,"metadata":{}},"sequence_number":0}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{"content":"1"},"finish_reason":null}],"usage":null,"obfuscation":"9341zo"}
+        event: response.in_progress
+        data: {"type":"response.in_progress","response":{"id":"resp_03483cb0d6cdcebd00698ac48b25f08194a24ab37b3073a684","object":"response","created_at":1770701963,"status":"in_progress","background":false,"completed_at":null,"error":null,"frequency_penalty":0.0,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-nano-2025-08-07","output":[],"parallel_tool_calls":true,"presence_penalty":0.0,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"auto","store":true,"temperature":1.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":null,"user":null,"metadata":{}},"sequence_number":1}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{"content":"\n"},"finish_reason":null}],"usage":null,"obfuscation":"mtroy"}
+        event: response.output_item.added
+        data: {"type":"response.output_item.added","item":{"id":"rs_03483cb0d6cdcebd00698ac48b6c7c8194a691724590d4114f","type":"reasoning","summary":[]},"output_index":0,"sequence_number":2}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{"content":"2"},"finish_reason":null}],"usage":null,"obfuscation":"4P7zRo"}
+        event: response.output_item.done
+        data: {"type":"response.output_item.done","item":{"id":"rs_03483cb0d6cdcebd00698ac48b6c7c8194a691724590d4114f","type":"reasoning","summary":[]},"output_index":0,"sequence_number":3}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{"content":"\n"},"finish_reason":null}],"usage":null,"obfuscation":"leulC"}
+        event: response.output_item.added
+        data: {"type":"response.output_item.added","item":{"id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","type":"message","status":"in_progress","content":[],"role":"assistant"},"output_index":1,"sequence_number":4}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{"content":"3"},"finish_reason":null}],"usage":null,"obfuscation":"GfQdKw"}
+        event: response.content_part.added
+        data: {"type":"response.content_part.added","content_index":0,"item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","output_index":1,"part":{"type":"output_text","annotations":[],"logprobs":[],"text":""},"sequence_number":5}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[{"index":0,"delta":{},"finish_reason":"stop"}],"usage":null,"obfuscation":"X"}
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":"1","item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","logprobs":[],"obfuscation":"4m1PuuBWa8T5x7n","output_index":1,"sequence_number":6}
 
-        data: {"id":"chatcmpl-CyhNToAB7yVFIFBGI106yOEABiaZE","object":"chat.completion.chunk","created":1768582459,"model":"gpt-5-nano-2025-08-07","service_tier":"default","system_fingerprint":null,"choices":[],"usage":{"prompt_tokens":13,"completion_tokens":142,"total_tokens":155,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":128,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"Uk"}
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":" ","item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","logprobs":[],"obfuscation":"AfqYPKAoNNOw71b","output_index":1,"sequence_number":7}
 
-        data: [DONE]
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":"2","item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","logprobs":[],"obfuscation":"GFtjd1RknUmqoVQ","output_index":1,"sequence_number":8}
 
-  recorded_at: Fri, 16 Jan 2026 16:54:21 GMT
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":" ","item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","logprobs":[],"obfuscation":"k3wzeqUMGJiWAql","output_index":1,"sequence_number":9}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","content_index":0,"delta":"3","item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","logprobs":[],"obfuscation":"Bis4vLK0zgzaVn4","output_index":1,"sequence_number":10}
+
+        event: response.output_text.done
+        data: {"type":"response.output_text.done","content_index":0,"item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","logprobs":[],"output_index":1,"sequence_number":11,"text":"1 2 3"}
+
+        event: response.content_part.done
+        data: {"type":"response.content_part.done","content_index":0,"item_id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","output_index":1,"part":{"type":"output_text","annotations":[],"logprobs":[],"text":"1 2 3"},"sequence_number":12}
+
+        event: response.output_item.done
+        data: {"type":"response.output_item.done","item":{"id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"1 2 3"}],"role":"assistant"},"output_index":1,"sequence_number":13}
+
+        event: response.completed
+        data: {"type":"response.completed","response":{"id":"resp_03483cb0d6cdcebd00698ac48b25f08194a24ab37b3073a684","object":"response","created_at":1770701963,"status":"completed","background":false,"completed_at":1770701964,"error":null,"frequency_penalty":0.0,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-nano-2025-08-07","output":[{"id":"rs_03483cb0d6cdcebd00698ac48b6c7c8194a691724590d4114f","type":"reasoning","summary":[]},{"id":"msg_03483cb0d6cdcebd00698ac48ce668819490208b39f09a1270","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"1 2 3"}],"role":"assistant"}],"parallel_tool_calls":true,"presence_penalty":0.0,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":1.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":{"input_tokens":13,"input_tokens_details":{"cached_tokens":0},"output_tokens":279,"output_tokens_details":{"reasoning_tokens":256},"total_tokens":292},"user":null,"metadata":{}},"sequence_number":14}
+
+  recorded_at: Tue, 10 Feb 2026 05:39:25 GMT
 recorded_with: VCR 6.4.0
 ...
